// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Category: Model for different categories of car parts.
Customer: Model representing customers purchasing car parts.
Employee: Model for shop employees.
Inventory: Model representing inventory details for parts.
Part: Model for individual car parts available in the shop.
Order: Model representing each order made by customers.
OrderItem: Model for individual items within an order, linking orders with parts.
Supplier: Model for suppliers providing car parts to the shop.
PartCategory: Junction table to establish many-to-many relationship between parts and categories.
SupplierOrder: Model representing orders made to suppliers.
SupplierOrderItem: Model for items within a supplier order, linking Supplier Orders with Parts.
Warranty: Model representing warranty information associated with parts.
'''
}

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    hire_date DATE 
    position VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    location VARCHAR 
    part_id INTEGER 
    quantity INTEGER 
    }

Table Part {
    id INTEGER [primary key]
    name VARCHAR 
    supplier_id INTEGER 
    price INTEGER 
    stock_quantity INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date DATE 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    part_id INTEGER 
    quantity INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_number VARCHAR 
    address VARCHAR 
    }

Table PartCategory {
    id INTEGER [primary key]
    part_id INTEGER 
    category_id INTEGER 
    }

Table SupplierOrder {
    id INTEGER [primary key]
    supplier_id INTEGER 
    date DATE 
    }

Table SupplierOrderItem {
    id INTEGER [primary key]
    supplier_order_id INTEGER 
    part_id INTEGER 
    quantity INTEGER 
    }

Table Warranty {
    id INTEGER [primary key]
    part_id INTEGER 
    expiration_date DATE 
    }



// Relationships
    Ref: Inventory.(part_id) < Part.(id)
    Ref: Part.(supplier_id) < Supplier.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(part_id) < Part.(id)
    Ref: PartCategory.(category_id) < Category.(id)
    Ref: PartCategory.(part_id) < Part.(id)
    Ref: SupplierOrder.(supplier_id) < Supplier.(id)
    Ref: SupplierOrderItem.(part_id) < Part.(id)
    Ref: SupplierOrderItem.(supplier_order_id) < SupplierOrder.(id)
    Ref: Warranty.(part_id) < Part.(id)
